# house-price-ai

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  steup.bat
app/: dashboard.py  simple_dashboard.py
docker/: Dockerfile.api  Dockerfile.dashboard  docker-compose.yml
model/: feature_importance.csv  model_info.json
src/api/: dependencies.py  main.py  schemas.py  simple_api.py
src/data/: make_dataset.py  preprocessing.py
src/models/: predict_model.py  train_model.py  train_simple.py
src/visualization/: visualize.py
tests/: test_api.py  test_data.py
