[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "house-price-ai"
version = "1.0.0"
description = "End-to-End House Price Prediction System"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "fastapi>=0.104.0",
    "streamlit>=1.28.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"